...
                  onSaved: (String value) {
                    _password = value;
                  },
                ),
              ),
              RaisedButton(
                key: Key("sign-in-button-2"),
                shape: new RoundedRectangleBorder(
                    borderRadius: new BorderRadius.circular(10.0)),
                color: Color.fromRGBO(30, 50, 56, 1),
                child: Padding(
                  padding: const EdgeInsets.fromLTRB(60, 20, 60, 20),
                  child: Text(
...
